# mppi_tutorial

./: README.md  __init__.py
core/: registry.py
defaults/: mppi.py
defaults/costs/: __init__.py  quadratic.py
defaults/dynamics/: __init__.py  cartpole.py  double_integrator.py  mobile2d.py  quadrotor3d.py
defaults/samplers/: __init__.py  gaussian.py  log_nln.py  uniform.py
examples/: cartpole_run.py  mobile2d_run_gaussian.py  mobile2d_run_log_nln.py  mobile2d_run_uniform.py  quadrotor3d_run.py
interfaces/: cost.py  dynamics.py  sampler.py
mujoco_ros2/: package.xml  setup.py
mujoco_ros2/mujoco_ros2/: main.py  mujoco_manager.py
outputs/: quad_sample_noise_gaussian.npy  quad_sample_traj_gaussian.npy  sample_noise_gaussian.npy  sample_noise_log_nln.npy  sample_noise_uniform.npy  sample_traj_gaussian.npy  sample_traj_log_nln.npy  sample_traj_uniform.npy
rci_action_manager/: package.xml  setup.cfg  setup.py
rci_description/franka_description/: CMakeLists.txt  package.xml
rci_description/franka_description/robots/Target_Basket_Medium/: model.xml
rci_description/franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_robot.xacro
rci_description/franka_description/robots/object/: box.xml  table.xml
rci_description/franka_description/robots/panda/: panda.urdf
rci_description/franka_description/robots/panda/xml/: panda.xml  scene.xml
rci_description/franka_description/rviz/: panda.rviz
utils/: cartpole_renderer.py  mobile2d_renderer.py  plot_noise.py  plot_trajectory.py  quadrotor3d_renderer.py
(+17 files in other folders)
