<?xml version="1.0"?>
<package format="3">
  <name>franka_description</name>
  <version>0.10.1</version>
  <description>franka_description contains URDF files and meshes of Franka Robotics robots</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/franka_description</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <author email="support@franka.de">Franka Robotics GmbH</author>

  <!-- ROS 2 빌드 툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 실행 의존성 -->
  <exec_depend>xacro</exec_depend>

  <!-- 테스트 관련 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- 필요한 경우 추가 export -->
    <build_type>ament_cmake</build_type>
  </export>
</package>

